# damotion

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: casadi_project-config.cmake  damotion-config.cmake  damotionConfig.cmake.in
common/: function.cc  function.h  profiler.h  sparsity.cc
common/math/: binomial.cc
common/trajectory/: bezier.cc
control/: controller.h  lqr.h  quad_prog.h
control/osc/: README.md  osc.cc  osc.h  solver.h
control/osc/tasks/: contact.cc  contact.h  motion.cc  motion.h  task.h
damotion/: CMakeLists.txt
damotion/casadi/: codegen.cc  codegen.h  eigen.cc  eigen.h  function.cc  function.h  function.hpp  pinocchio_model.cc  pinocchio_model.h
damotion/common/: eigen.h  function.cc  function.h  logging.h  polynomial_function.h  profiler.h  sparsity.cc  sparsity.h
damotion/common/math/: binomial.cc  binomial.h  log.cc  log.h  plane.h  polygon.h  quaternion.cc  random.h
damotion/common/trajectory/: bezier.cc  bezier.h  piecewise_bezier.h  trajectory.cc  trajectory.h
damotion/control/: fwd.h  lqr.h
damotion/control/osc/: README.md  osc.cc  osc.h
damotion/control/osc/tasks/: contact.cc  contact.h  motion.cc  motion.h  task.h
damotion/core/: eigen.h  function.hpp  fwd.hpp  logging.hpp  optional_matrix.hpp  profiler.cc  profiler.hpp
damotion/core/math/: binomial.cc  binomial.h  log.cc  plane.h  polygon.h  quaternion.cc  quaternion.h  random.h
damotion/core/trajectory/: bezier.cc  bezier.h  piecewise_bezier.h  trajectory.cc  trajectory.h
damotion/estimation/: ekf.h  measurement_base.h
damotion/model/: frame.cc  frame.h
damotion/optimisation/: binding.h  block.cc  block.h  bounds.cc  bounds.h  bounds.hpp  constraints.hpp  costs.hpp  fwd.h  initial_value.hpp  program.cc  program.h
damotion/optimisation/block/: base.h  dense.h  sparse.h
damotion/optimisation/constraints/: base.h  bounding_box.h  constraints.h  linear.h  manager.hpp
damotion/optimisation/costs/: base.h  costs.h  linear.h  manager.hpp  quadratic.h
damotion/planning/optimisation/collocation/: base.h
damotion/solvers/: README.md  base.cc  base.h  binding.h  bounds.cc  bounds.h  constraint.cc  constraint.h  cost.cc  cost.h  ipopt.cc  ipopt.h  program.cc  program.h  qpoases.cc  qpoases.h  solve_ipopt.cc  solve_ipopt.h  solve_qpoases.cc  solve_qpoases.h  solver.cc  solver.h  sparse.cc  sparse.h
damotion/symbolic/: expression.h  parameter.cc  parameter.h  variable.cc  variable.h  variable.hpp
damotion/system/: controlled.cc  controlled.h  system.cc  system.h
damotion/utils/: casadi.cc  codegen.cc  codegen.h  eigen_wrapper.cc  eigen_wrapper.h  log.cc  log.h  pinocchio_model.cc  pinocchio_model.h
doc/: Doxyfile
model/: frame.h
optimisation/: binding.h  bounds.cc  bounds.h  program.cc  program.h
optimisation/constraints/: base.h  bounding_box.h  constraints.h  linear.h
optimisation/costs/: base.h  costs.h  linear.h  quadratic.h
planning/optimisation/collocation/: base.h
planning/path_parameterisation/: trajectory.h  ua1.cc  ua1.h
solvers/: README.md  base.h  binding.h  bounds.cc  bounds.h  constraint.cc  constraint.h  cost.cc  cost.h  index.h  ipopt.cc  ipopt.h  program.cc  program.h  qpoases.h  solve_qpoases.h  solver.cc  solver.h  sparse.cc  sparse.h  variable.h
symbolic/: expression.h  parameter.cc  parameter.h  variable.cc  variable.h
system/: constraint.cc  constraint.h  controlled.cc  controlled.h  system.cc  system.h
test/: CMakeLists.txt
test/casadi/: eigen.cc  function.cc
test/common/: eigen.cc  function.cc  profiler.cc
test/control/: osc.cc
test/core/: function.cc
test/optimisation/: binding.cc  block.cc  constraint_vector.cc  objective_function.cc  program.cc
test/planning/: collocation.cc
test/solvers/: constraint.cc  cost.cc  ipopt.cc  program.cc  qpoases.cc  sparse.cc
test/symbolic/: variable.cc
test/system/: constraint.cc  controlled.cc  system.cc
test/utils/: casadi.cc  codegen.cc  eigen_wrapper.cc  expression.cc  log.cc  log3.cc  pinocchio_model.cc
utils/: casadi.cc  casadi.h  codegen.cc  codegen.h  eigen_wrapper.cc  eigen_wrapper.h  log.cc  log.h  log3.cc  log3.h  pinocchio_model.cc  pinocchio_model.h
